# redpill-weather

./: .gitignore  docker-compose.yml  pyproject.toml
docs/: overview.excalidraw
replication/: open_weather_map.py
